2010-07-06  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #14967: [Caching framework] fileBackend testcase removes files in /sbin
	* Fixed bug #14977: Add php cache frontend to t3lib/config_default.php (Thanks to Felix Oertel)

2010-07-06  Francois Suter  <francois@typo3.org>

	* Added feature #14993: Use TYPO3_REQUESTTYPE also for Install Tool access
	* Added feature #14994: Add Scheduler task for autopublication of workspaces

2010-07-06  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14960: [t3skin] apps-pagetree.css is redundant (Thanks to Felix Kopp)
	* Follow-up to #13379: Sprite Icon API (Thanks to Steffen Ritter)
	* Fixed bug #14980: Install tool causes PHP warnings if typo3conf/ is not writeable

2010-07-05  Susanne Moog  <typo3@susanne-moog.de>

	* Follow-up to #14705: In BE login form labels: position of caps lock warning  (thanks to Steffen Gebert)
	* Fixed bug #14880: introduced type hinting in t3lib_iconWorks (thanks to Jigal van Hemert)
	* Fixed bug #14824: wrong icon in template analyzer (thanks to Georg Ringer)

2010-07-05  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12514: Installtool duplicates values of fields with defaultTypoScript_constants
	* Fixed bug #10958: Broken i18n_parent relation upon localizing records in workspace (Thanks to Tolleiv Nietsch)
	* Fixed bug #14907: Help Modules can not be disabled on a per user basis (Thanks to Georg Ringer)
	* Fixed bug #14957: Styling of record history (Thanks to Georg Ringer)

2010-07-04  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14929: htmlArea RTE: Font Family and Font Size Dropdown boxes don't open
	* Fixed bug #14996: htmlArea RTE: Clicking in drop down boxes should mark text

2010-07-04  Francois Suter  <francois@typo3.org>

	* Fixed bug #14989: Use TYPO3_REQUESTTYPE consistently for CLI calls detection

2010-07-03  Francois Suter  <francois@typo3.org>

	* Cleanup #14987: Spelling mistakes in cli_dispatch.phpsh

2010-07-02  Christian Kuhn  <lolli@schwarzbu.ch>
